# MineSweeper

./: CMakeLists.txt  README.md  main.cpp
Headers/: BoardGame.h  Client.h  Login.h
Sources/: BoardGame.cpp  Client.cpp  Login.cpp
